# University

1ano/2semestre/AC1/Work/: work.asm
2ano/1semestre/BD/Trabalho 2/: ER_diagram.drawio  create_tables.txt  new_inserts.txt  sql_questions.sql
2ano/1semestre/CG/3JS/: Fjalla One_Regular.js  index.html
2ano/1semestre/CG/C2D/: ariete.js  game.js  index.html  porta.js
2ano/1semestre/CG/SVG/: index.html
2ano/1semestre/P2/Trabalho/: Cipher.java
2ano/2semestre/ALP/AF/: ex1.py  ex2.py  ex3.py  ex4.py
2ano/2semestre/ALP/ER/: ex1.py  ex2.py  ex3.py  ex4.py
2ano/2semestre/ALP/GIC/: ex1.py  ex2.py  ex3.py  ex4.py
2ano/2semestre/EDA2/AllTheWays/: Main.java  input1.txt
2ano/2semestre/EDA2/Dependecies/: Main.java  input1.txt
2ano/2semestre/EDA2/HillClimber_Trabalho2/: Main.java  input  input3  input4  input5  out  output6
2ano/2semestre/EDA2/MaximumNumber/: Main.java
2ano/2semestre/EDA2/Mosaics_Trabalho1/: Main.java  input1.txt  input2.txt
2ano/2semestre/EDA2/News/: Lala.java  Main.java  input2.txt
2ano/2semestre/EDA2/PolygonPhobia/: Lala.java  Main.java  input
2ano/2semestre/EDA2/Promotions/: Main.java
2ano/2semestre/EDA2/SocialNetworks/: Main.java  input1.txt
2ano/2semestre/EDA2/ToysForChristmas/: Main.java
2ano/2semestre/EDA2/TrocoDeMoedas/: Main.java
2ano/2semestre/EDA2/TrocoDeMoedas_X/: Main.java
2ano/2semestre/Redes/Lab04/: client
2ano/2semestre/Redes/Lab05/: a.out
2ano/2semestre/Redes/Sockets/: CMakeLists.txt
2ano/2semestre/Redes/Sockets/src/: main.c
3ano/1semestre/P3/: paktris.ml
3ano/2semestre/SI/: backdoor.py  server.py
(+121 files in other folders)
